# Quantum-Resistant-File-Monitoring

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  install.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  security.yml
av-cli/: Cargo.toml
av-cli/src/: main.rs
av-core/: Cargo.toml
av-core/src/: config.rs  engine.rs  heuristics.rs  lib.rs  monitoring.rs  signatures.rs  telemetry.rs
av-daemon/: Cargo.toml
av-daemon/src/: fanotify.rs  main.rs  security.rs
av-quarantine/: Cargo.toml
av-quarantine/src/: lib.rs
av-signatures/: Cargo.toml
av-signatures/src/: lib.rs
config/: daemon.toml
policies/apparmor/: av-daemon.apparmor
policies/seccomp/: av-daemon.json
rules/: example.yar  production.yar
scripts/: build_deb.sh  uninstall.sh
systemd/: av-daemon.service
tests/: eicar_test.rs  integration.rs
