[package]
name = "av-core"
edition = "2021"
version = "0.1.0"
publish = false

[lib]
name = "av_core"
path = "src/lib.rs"

[features]
default = []
neon_accel = []
ebpf_probes = []
landlock_confine = []
battery_saver = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
tokio.workspace = true
async-trait.workspace = true
rayon = { workspace = true, optional = true }
parking_lot.workspace = true
config.workspace = true
rand.workspace = true
sha2.workspace = true
goblin.workspace = true
yara.workspace = true
bloom.workspace = true
walkdir.workspace = true
chrono.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
