[package]
name = "av-daemon"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
publish = false

[features]
default = ["battery_saver"]
neon_accel = []
ebpf_probes = []
landlock_confine = []
battery_saver = []

[dependencies]
av-core = { path = "../av-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
config.workspace = true
dirs.workspace = true
notify.workspace = true
parking_lot.workspace = true
chrono.workspace = true
reqwest.workspace = true
ring.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
heim.workspace = true
seccomp = { workspace = true, optional = true }
landlock = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
