[package]
name = "av-quarantine"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
rand.workspace = true
ring.workspace = true
base64.workspace = true
hex.workspace = true
parking_lot.workspace = true
chrono.workspace = true
