[package]
name = "av-signatures"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
av-core = { path = "../av-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
ring.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
semver.workspace = true
chrono.workspace = true
url.workspace = true
